# hourly

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
lib/: Entity.h  Filesystem.h  Hourly.h  Renderer.h  SpriteAnimation.h  TextureContext.h
src/: Entity.cpp  Filesystem.cpp  Renderer.cpp  SpriteAnimation.cpp  TextureContext.cpp
